static: custom.css: Prevent code tags from wrapping

--- a/static/custom.css
+++ b/static/custom.css
@@ -9,6 +9,7 @@ code {
     border-radius: 4px;
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
     margin: 4px;
+    white-space: nowrap;
 }
 /* 多行代码块 */
 div.highlight {
@@ -29,6 +30,7 @@ pre code {
     padding: 0px 0px;
     margin: 0;
     background-color: transparent;
+    white-space: pre;
 }
 span.btn-pre-copy{
     -webkit-user-select: none;
